Endpoint eliminar modelos y algunos modelos de prueba
