# routes/api.php
@@ -44,6 +44,7 @@ Route::post('/models/updateModel', 'ModelController@updateModelInUse');
 Route::post('models/algorithms', 'ModelController@getAlgorithms');
 Route::post('models/models', 'ModelController@getModels');
 Route::post('models/lastModels', 'ModelController@getLastModels');
+Route::post('models/deleteModel', 'ModelController@deleteModel');
 
 // scrapers (admin)
 Route::post('/scrapers/weathers/forecast', 'ScraperController@weatherForecast');
